# lookscanned-py

./: .gitignore  CLAUDE.md  README.md  README.zh.md  pyproject.toml  requirements-gui.txt  requirements.txt  run-gui.bat
lookscanned/: __init__.py  __main__.py  effects.py  scanner.py
lookscanned/gui/: __init__.py  __main__.py  app.py
lookscanned/locale/: __init__.py  en.py  zh.py
