[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lookscanned"
version = "0.1.0"
description = "Make PDF documents look like they were scanned"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pymupdf>=1.23.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5"]

[project.scripts]
lookscanned = "lookscanned.__main__:main"
lookscanned-gui = "lookscanned.gui.app:launch"
